--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   fancy_bottom_navigation: ^0.3.2
+  flutter_staggered_grid_view: ^0.3.4
 
 dev_dependencies:
   flutter_test:
