Install google maps library, make cards out of backend data

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="tinder_cards"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyA4cLJTDZ--z-SoHOmTps3PNMbJsJhx8i8"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
