--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ flutter:
    - res/portrait.jpeg
    - res/SampleImage1.png
    - res/SampleImage2.png
+   - res/logo-trans.png
+   - res/logo-full.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
